# bot

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
plugins/blackjack/: __init__.py  game.py
plugins/jack/: __init__.py
plugins/scheduler/: __init__.py  config.py
plugins/tortoise_orm/: __init__.py  db_operations.py  model.py
plugins/twenty_eight/: __init__.py  async_hash_fetcher.py  bet.py  config.py  draw.py  memory.py  utils.py
